<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical">

    <include layout="@layout/toolbar_base" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="120dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/abc_text_size_display_1_material" />

        <TextView
            android:id="@+id/version_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/abc_text_size_medium_material" />

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="120dp"
            app:mrl_rippleColor="?attr/colorPrimary"
            app:mrl_rippleOverlay="true">

            <Button
                android:id="@+id/btn_blog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_button_background"
                android:text="@string/blog"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/abc_text_size_button_material" />
        </com.balysv.materialripple.MaterialRippleLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="14dp"
            app:mrl_rippleColor="?attr/colorPrimary"
            app:mrl_rippleOverlay="true">

            <Button
                android:id="@+id/btn_project_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_button_background"
                android:text="@string/project_home"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/abc_text_size_button_material" />
        </com.balysv.materialripple.MaterialRippleLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:lineSpacingExtra="4dp"
            android:text="@string/about_bottom_text"
            android:textColor="#33ffffff" />
    </LinearLayout>
</LinearLayout>